[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/sprites/environment/signpost_8p.png" type="Texture" id=1]
[ext_resource path="res://scenes/effct_physic/SignPost.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.2776, 8.48323 )

[node name="SignPost" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="PlaceName" type="Label" parent="."]
margin_left = -16.0
margin_top = -18.0
margin_right = 51.0
margin_bottom = -4.0
rect_scale = Vector2( 0.508377, 0.471518 )
custom_colors/font_color = Color( 0.427451, 0.929412, 0.917647, 1 )
text = "Start Place"
align = 1

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -16, -14 )
scale = Vector2( 0.508377, 0.471518 )
collision_layer = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 31.4727, 21.2081 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
